# GPULitmusExecutor

./: .gitignore  .gitmodules  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/tests/: testing_common.h
app/src/main/assets/tests/MP/: kernel.cl
app/src/main/cpp/: CMakeLists.txt  cl_execution.h  droidcl.h  hello-jni.c  kernel.cl  litmus-test.cpp  main.cpp  opencl-example.c  stable_main.cpp
app/src/main/cpp/includes/CL/: cl.hpp
app/src/main/java/com/example/hellojni/: HelloJni.java
app/src/main/java/com/example/openclexample/: APIHandler.java  MainActivitiy.java  OnLoopjCompleted.java  OpenCLExample.java  ServerRestClient.java  TestExecutingActivity.java  TestFinishedActivity.java
app/src/main/java/com/suhjohn/androidgpuconformancetester/: APIHandler.java  CustomTestActivity.java  FullTestActivity.java  MainActivitiy.java  MainActivity.java  OnLoopjCompleted.java  ServerRestClient.java  TestExecutingActivity.java  TestFinishedActivity.java
app/src/main/java/com/suhjohn/androidgpuconformancetester/utils/: LitmusTest.java  OptionManager.java  TestFileHandler.java
app/src/main/res/layout/: activity_custom_test.xml  activity_hello_jni.xml  activity_main.xml  activity_test_finished.xml
app/src/main/res/values/: colors.xml  strings.xml
